# openeuler-globaltrustauthority-rbs

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
deployment/docker/: docker-compose.yml  dockerfile  rbs.compose.yaml
docs/api/rbs/html/: rbs_rest_api.html
docs/api/rbs/md/: rbs_rest_api.md
docs/proto/: rbs_rest_api.yaml
rbc/: Cargo.toml  build.rs  cbindgen.toml
rbc/conf/: rbc.yaml
rbc/examples/c/: demo.c
rbc/include/: rbc.h
rbc/src/: lib.rs  sdk.rs
rbc/src/client/: rest.rs
rbc/src/evidence/: mod.rs  native_evidence.rs
rbc/src/ffi/: client.rs  error.rs  mod.rs  resource.rs  session.rs  utils.rs
rbc/src/token/: mod.rs  native_token.rs  rbs_token.rs
rbc/src/tools/: mod.rs  tee_key.rs
rbc/tests/: rest_client_test.rs  sdk_test.rs  tee_key_test.rs
rbc/tests/data/: agent_config.yaml
rbs/: Cargo.toml  build.rs
rbs/api-types/: Cargo.toml
rbs/api-types/src/: api.rs  auth.rs  config.rs  constants.rs  error.rs  lib.rs  resource.rs  user.rs
rbs/api-types/src/openapi/: mod.rs
rbs/api-types/src/openapi/system/: mod.rs  version.rs
rbs/api-types/tests/: auth_test.rs  constants_test.rs  error_test.rs  resource_test.rs  system_test.rs  user_test.rs  version_json_test.rs
rbs/conf/: mysql_rbs.sql  rbs.yaml  sqlite_rbs.sql
rbs/core/: Cargo.toml
rbs/core/src/: lib.rs
rbs/core/src/attestation/: manager.rs  mod.rs  provider.rs
rbs/core/src/auth/: mod.rs
rbs/core/src/infra/: logging.rs  mod.rs
rbs/core/src/infra/logging/: init.rs  mod.rs
rbs/core/src/infra/rdb/: connection.rs  error.rs  mod.rs
rbs/core/src/resource/: manager.rs  mod.rs  provider.rs
rbs/core/src/system/: mod.rs  version.rs
rbs/core/src/user/: manager.rs  mod.rs  provider.rs
rbs/core/tests/: logging_concurrency.rs  logging_init_append.rs  logging_init_json.rs  logging_init_missing_dir.rs  logging_init_stderr.rs  logging_permissions.rs  logging_permissions_file_mode.rs  logging_rotation.rs  logging_rotation_basic.rs  logging_rotation_gzip.rs  logging_tests.rs  version_test.rs
rbs/rest/: Cargo.toml
rbs/rest/src/: lib.rs
rbs/rest/src/api_doc/: document.rs  mod.rs
rbs/rest/src/routes/: auth.rs  error.rs  mod.rs  resource.rs  version.rs
rbs/rest/src/server/: http.rs  mod.rs  rate_limit.rs
rbs/rest/tests/: http_tests.rs  rate_limit_tests.rs  version_tests.rs
rbs/src/: lib.rs
rbs/tests/: load_config.rs
rpm/: rbc.spec  rbs-cli.spec  rbs.spec
scripts/: build-docker.sh  build-rpm.sh  build.sh  generate-api-docs.sh
scripts/conf/openapi-docs/: package-lock.json  package.json
scripts/lib/: build-deps.sh  os-pkg.sh
service/: rbs.service
tests/: README.md  run_e2e.sh  scripts_smoke.sh  test_all.sh
tests/rbs/: e2e_version_curl.sh
tools/: Cargo.toml
tools/rbs-admin-client/src/: lib.rs
tools/src/: lib.rs
tools/src/admin/: cert.rs  policy.rs  ref_value.rs  res.rs  res_policy.rs  user.rs
tools/src/cli/: mod.rs
tools/src/client/: cmd.rs
tools/src/common/: formatter.rs  mod.rs  validate.rs
tools/src/config/: cmd.rs  mod.rs
tools/src/error/: mod.rs
tools/src/token/: cmd.rs  mod.rs
tools/src/version/: cmd.rs  mod.rs
