[workspace]
members = [
    "rbs/api-types",
    "rbs/core",
    "rbs/rest",
    "rbs",
    "rbc",
    "tools",
    "tools/rbs-admin-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["globaltrustauthority-rbs Team"]
license = "MulanPSL-2.0"

[workspace.dependencies]
# Common dependencies; sub-projects can reference these
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_yaml = "0.9"
utoipa = { version = "5.4", default-features = true, features = ["macros", "preserve_order"] }
log = { version = "0.4", features = ["std"] }
