[workspace]
members = [
    "rbs/api-types",
    "rbs/core",
    "rbs/rest",
    "rbs",
    "rbc",
    "tools",
    "tools/rbs-admin-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["globaltrustauthority-rbs Team"]
license = "MulanPSL-2.0"

[workspace.dependencies]
# Common dependencies; sub-projects can reference these
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_yaml = "0.9"
utoipa = { version = "5.4", default-features = true, features = ["macros", "preserve_order"] }
log = { version = "0.4", features = ["std"] }
reqwest = "0.11"
base64 = "0.22.1"
openssl = "0.10.15"
zeroize = { version = "1.6", features = ["derive"] }
rpassword = "7"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls", "debug-print", "mock"] }
log4rs = { version = "1.2.0", features = ["gzip"] }
rand = "0.9"
josekit = "0.10.3"
chrono = "0.4.44"
wiremock = "0.6"
cbindgen = "0.29.0"
async-trait = "0.1.89"