[package]
name = "rbc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rbc"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rbc"
path = "src/bin/main.rs"

[dependencies]
rbs-api-types = { path = "../rbs/api-types" }
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
zeroize.workspace = true
base64.workspace = true
serde_yaml.workspace = true
josekit.workspace = true
async-trait.workspace = true
attestation_client = { git = "https://gitcode.com/openeuler/global-trust-authority", package = "attestation_client" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true

[build-dependencies]
cbindgen.workspace = true