[package]
name = "rbs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rbs-cli"
path = "src/bin/main.rs"

[dependencies]
rbc = { path = "../rbc" }
rbs-admin-client = { path = "rbs-admin-client" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
base64.workspace = true
openssl.workspace = true
zeroize.workspace = true
rpassword.workspace = true
