[package]
name = "rbs-api-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RBS API types"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
utoipa.workspace = true
