[package]
name = "rbs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RBS core business logic"

[dependencies]
rbs-api-types = { path = "../api-types" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
flate2 = "1"

[dev-dependencies]
tempfile = "3"
